--- a/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
+++ b/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
@@ -1,6 +1,7 @@
 .info-card-wrapper {
   display: flex;
   flex-direction: row;
+  align-items: center;
   border-radius: 12px;
   cursor: pointer;
   padding: 16px;
