--- a/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
+++ b/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 
     .ic-label-wrapper {
       display: flex;
