Added partner logo

--- a/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
@@ -50,6 +50,11 @@
     gap: 10px;
   }
 
+  .nav-bar-logo {
+    height: 24px;
+    max-width: 164px;
+  }
+
   .nav-bar-title-wrapper {
     padding: 0px 16px;
   }
