--- a/react_webviews/src/pages/AppLanding/Landing/Landing.scss
+++ b/react_webviews/src/pages/AppLanding/Landing/Landing.scss
@@ -9,6 +9,22 @@
     }
   }
 
+  .oc-container {
+    position: relative;
+    cursor: pointer;
+  }
+
+  .oc-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    div {
+      width: 50%;
+      height: 100%;
+    }
+  }
+
   .oc-icon-wrapper {
     padding: 35px 16px 60px 16px;
 
@@ -21,14 +37,12 @@
     padding: 20px 10px 10px 20px;
     border-radius: 24px 24px 0px 0px;
     height: 32vh;
-    position: relative;
     margin-top: -24px;
 
     .oc-bg-wrapper {
       background-repeat: no-repeat;
       background-size: contain;
       min-height: 167px;
-      position: absolute;
     }
 
     .oc-title {
