Fixed registration icon handling

--- a/react_webviews/src/designSystem/atoms/TrustIcon/TrustIcon.scss
+++ b/react_webviews/src/designSystem/atoms/TrustIcon/TrustIcon.scss
@@ -7,4 +7,12 @@
     width: 100%;
     margin-top: 10px;
   }
+
+  .ati-registration {
+    text-align: left;
+
+    .atir-text {
+      margin-top: 20px;
+    }
+  }
 }
