--- a/react_webviews/src/pages/AppLanding/Landing/Landing.scss
+++ b/react_webviews/src/pages/AppLanding/Landing/Landing.scss
@@ -79,19 +79,9 @@
   }
 
   .al-explore-categories,
-  .lmp-platform-motivators,
-  .al-marketing-banners {
+  .lmp-platform-motivators {
     .swiper-slide {
       width: unset !important;
-    }
-  }
-
-  .al-marketing-banners {
-    padding: 24px 16px 0px 16px;
-
-    .al-mb-icon {
-      width: 332px;
-      height: 174px;
     }
   }
 
