Added skelton loader for menu item

--- a/react_webviews/src/designSystem/molecules/MenuItem/MenuItem.scss
+++ b/react_webviews/src/designSystem/molecules/MenuItem/MenuItem.scss
@@ -27,4 +27,12 @@
     display: flex;
     flex-direction: column;
   }
+
+  .mis-text-wrapper {
+    width: 100%;
+  }
+
+  .mis-left-img  {
+    border-radius: 6px;
+  }
 }
