Added skelton loader for card horizontal

--- a/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
+++ b/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
@@ -34,3 +34,9 @@
     margin-top: 24px;
   }
 }
+
+.card-horizontal-skelton-wrapper {
+  min-height: 150px;
+  border-radius: 12px;
+  padding: 16px;
+}
