Minor fixes for PfSelectionCard

--- a/react_webviews/src/designSystem/feature/portfolio/PfFundSelectionCard/PfFundSelectionCard.scss
+++ b/react_webviews/src/designSystem/feature/portfolio/PfFundSelectionCard/PfFundSelectionCard.scss
@@ -6,6 +6,11 @@
     padding: 16px 16px 8px !important;
     .main-title {
       margin-left: 12px;
+      width: 75%;
+    }
+    .top-label {
+      width: 25%;
+      text-align: right;
     }
     .checkbox {
       width: 20px;
