--- a/react_webviews/src/login_and_registration/components/LoginContainer.scss
+++ b/react_webviews/src/login_and_registration/components/LoginContainer.scss
@@ -23,6 +23,10 @@
       height: 30px;
       margin-left: 26px;
     }
+
+    .navbar-white-bg {
+      background-color: white;
+    }
   }
 
   .login-details {
