Fixed bottom padding

--- a/react_webviews/src/pages/AppLanding/Landing/Landing.scss
+++ b/react_webviews/src/pages/AppLanding/Landing/Landing.scss
@@ -56,6 +56,8 @@
 }
 
 .landing-main-wrapper {
+  padding-bottom: 40px !important;
+  
   .lmp-platform-motivators {
     background-color: white;
     padding: 26px 16px 38px 16px;
