--- a/react_webviews/src/pages/AppLanding/MfLanding/MfLanding.scss
+++ b/react_webviews/src/pages/AppLanding/MfLanding/MfLanding.scss
@@ -1,4 +1,6 @@
 .mf-landing-wrapper {
+  padding-bottom: 40px !important;
+  
   .al-explore-categories {
     .swiper-slide {
       width: unset !important;
