--- a/react_webviews/src/featureComponent/appLanding/PlatformMotivator.scss
+++ b/react_webviews/src/featureComponent/appLanding/PlatformMotivator.scss
@@ -13,6 +13,7 @@
   .pm-text-wrapper {
     display: flex;
     flex-direction: column;
+    padding-left: 8px;
 
     .pm-subtitle-text {
       margin-top: 4px;
