--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1191,7 +1191,11 @@ input#pan {
     width: fit-content;
     margin: 0 auto;
     margin-top: 20px;
-    min-width: 150px
+    min-width: 150px;
+
+    .button {
+      width: 100%;
+    }
   }
 }
 
