--- a/react_webviews/src/pages/AppLanding/MfLanding/MfLanding.scss
+++ b/react_webviews/src/pages/AppLanding/MfLanding/MfLanding.scss
@@ -8,15 +8,19 @@
   }
 
   .al-explore-categories {
-    padding: 24px 16px 16px 16px;
+    padding: 24px 0px 16px 16px;
 
     .al-ec-title {
-      padding-bottom: 16px;
+      padding: 0px 16px 16px 0px;
     }
 
     .al-ec-card {
       width: 168px;
     }
+  }
+
+  .al-ec-content .al-ec-card div {
+    width: 85%;
   }
 
   .mfl-kyc {
