--- a/react_webviews/src/pages/DIY/DiyLanding/DiyLanding.scss
+++ b/react_webviews/src/pages/DIY/DiyLanding/DiyLanding.scss
@@ -12,6 +12,10 @@
       height: 120px;
     }
 
+    .feature-card-wrapper {
+      height: 100%;
+    }
+
     .diy-c-trending-wrapper {
       padding-bottom: 24px;
       background-color: white;
