--- a/react_webviews/src/pages/AppLanding/Landing/Landing.scss
+++ b/react_webviews/src/pages/AppLanding/Landing/Landing.scss
@@ -60,7 +60,7 @@
   
   .lmp-platform-motivators {
     background-color: white;
-    padding: 26px 16px 38px 16px;
+    padding: 26px 0px 38px 0px;
   }
 
   .lmw-portfolio-overview {
@@ -75,8 +75,11 @@
     }
   }
 
-  .al-explore-categories,
   .lmp-platform-motivators {
+    .swiper-container {
+      padding: 0px 16px;
+    }
+
     .swiper-slide {
       width: unset !important;
     }
@@ -96,18 +99,6 @@
 
     .al-io-title {
       padding: 0px 16px;
-    }
-  }
-
-  .al-explore-categories {
-    padding: 24px 16px 16px 16px;
-
-    .al-ec-title {
-      padding-bottom: 16px;
-    }
-
-    .al-ec-card {
-      width: 168px;
     }
   }
 
