fixed using bottom sheet with children

--- a/react_webviews/src/featureComponent/ReferAndEarn/EnterReferralBottomSheet/EnterReferralBottomSheet.scss
+++ b/react_webviews/src/featureComponent/ReferAndEarn/EnterReferralBottomSheet/EnterReferralBottomSheet.scss
@@ -1,7 +1,4 @@
-.bottom-sheet-wrapper {
-  background-color: white;
-  padding: 12px 16px 16px 16px;
-
+.enter-ref-bottom-sheet-wrapper{
   .btn-sheet-title {
     margin-bottom: 16px;
   }
