--- a/react_webviews/src/pages/AppLanding/Landing/Landing.scss
+++ b/react_webviews/src/pages/AppLanding/Landing/Landing.scss
@@ -57,16 +57,6 @@
 
 .landing-main-wrapper {
   padding-bottom: 40px !important;
-  
-  .lmp-platform-motivators {
-    background-color: white;
-    padding: 26px 16px 38px 16px;
-
-    .pm-left-image {
-      width: 64px;
-      height: 64px;
-    }
-  }
 
   .lmw-portfolio-overview {
     margin: 24px 16px 16px 16px;
@@ -80,8 +70,7 @@
     }
   }
 
-  .al-explore-categories,
-  .lmp-platform-motivators {
+  .al-explore-categories {
     .swiper-slide {
       width: unset !important;
     }
