--- a/react_webviews/src/pages/AppLanding/MfLanding/MfLanding.scss
+++ b/react_webviews/src/pages/AppLanding/MfLanding/MfLanding.scss
@@ -15,6 +15,10 @@
     margin: 24px 16px 16px 16px;
   }
 
+  .mfl-passive-footer {
+    font-weight: 400;
+  }
+
   .al-investment-options {
     background-color: white;
     padding: 32px 0px 20px 0px;
