--- a/react_webviews/src/featureComponent/portfolio/PfFundSelection/PfFundSelectionCard.scss
+++ b/react_webviews/src/featureComponent/portfolio/PfFundSelection/PfFundSelectionCard.scss
@@ -1,7 +1,7 @@
-.container {
+.pf-selection-container {
   width: 100%;
   border-radius: 12px;
-
+  cursor: pointer;
   .top-row {
     padding: 16px 16px 8px !important;
     .main-title {
