--- a/react_webviews/src/featureComponent/appLanding/ExploreCategories.scss
+++ b/react_webviews/src/featureComponent/appLanding/ExploreCategories.scss
@@ -1,5 +1,6 @@
 .al-explore-categories {
   padding: 24px 0px 16px 0px;
+
   .swiper-slide {
     width: unset !important;
   }
@@ -8,11 +9,12 @@
   }
 
   .al-ec-title {
-    padding-bottom: 16px;
+    padding-bottom: 8px;
     padding-left: 16px;
   }
 
   .al-ec-card {
     width: 168px;
+    margin: 8px 0px 1px 0px;
   }
 }
