Removed back icon in main landing for web

--- a/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
@@ -21,9 +21,10 @@
     &.show-nav-title {
       opacity: 1;
     }
-    &.nav-header-lm {
-      margin-left: 8px;
-    }
+  }
+
+  .nav-header-lm {
+    margin-left: 8px;
   }
 
   .nav-header-left {
