Removed wrapper for skelton loader

--- a/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
+++ b/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
@@ -40,6 +40,7 @@
 .card-horizontal-skelton-wrapper {
   min-height: 150px;
   border-radius: 12px;
+  background-color: white;
 
   .ch-sw-button {
     border-radius: 12px;
