--- a/react_webviews/src/pages/ReferAndEarn/MyReferrals/MyReferrals.scss
+++ b/react_webviews/src/pages/ReferAndEarn/MyReferrals/MyReferrals.scss
@@ -1,8 +1,17 @@
 .my-referrals {
-  background-color: white;
+  padding: 0px 0px 20px 0px;
+
+  .mr-top-header {
+    background-color: white;
+    padding: 16px;
+  }
 
   .mr-referred-title {
-    margin: 24px 0px;
+    margin: 24px 0px 8px;
+  }
+
+  .mr-referral-list-wrapper {
+    padding: 0 16px;
   }
 
   .mr-card-wrapper {
