--- a/react_webviews/src/pages/ReferAndEarn/ClaimCashRewards/ClaimCashRewards.scss
+++ b/react_webviews/src/pages/ReferAndEarn/ClaimCashRewards/ClaimCashRewards.scss
@@ -1,6 +1,6 @@
 .claim-cash-rewards {
-  .ccr-header-title {
-    margin: 24px 0px;
+  .ccr-enter-amount-card-wrapper {
+    margin: 24px 16px;
   }
 
   .ccr-enter-amount-wrapper {
