--- a/react_webviews/src/pages/ReferAndEarn/WalletTransfer/WalletTransfers.scss
+++ b/react_webviews/src/pages/ReferAndEarn/WalletTransfer/WalletTransfers.scss
@@ -3,11 +3,11 @@
     margin: 24px 0px;
   }
 
-  .wt-footer{
+  .wt-footer {
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    right: 0; 
+    right: 0;
     padding: 8px;
   }
 }
