--- a/react_webviews/src/pages/ReferAndEarn/Landing/Landing.scss
+++ b/react_webviews/src/pages/ReferAndEarn/Landing/Landing.scss
@@ -27,4 +27,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  .rae-card-wrapper {
+    margin: 0 16px 16px 16px;
+    height: 100%;
+  }
 }
