--- a/react_webviews/src/pages/ReferAndEarn/Landing/Landing.scss
+++ b/react_webviews/src/pages/ReferAndEarn/Landing/Landing.scss
@@ -1,6 +1,4 @@
 .refer-and-earn-landing {
-  margin-bottom: 24px;
-
   .rae-wrapper {
     padding: 24px 16px;
     margin: 24px 0;
@@ -31,5 +29,10 @@
   .rae-card-wrapper {
     margin: 0 16px 16px 16px;
     height: 100%;
+  }
+
+  .rae-bottom-tnc {
+    margin-top: 40px;
+    cursor: pointer;
   }
 }
