--- a/react_webviews/src/featureComponent/appLanding/PlatformMotivators.scss
+++ b/react_webviews/src/featureComponent/appLanding/PlatformMotivators.scss
@@ -1,9 +1,13 @@
 .platform-motivators-wrapper {
   background-color: white;
-  padding: 26px 16px 16px 16px;
+  padding: 26px 0px 16px 0px;
 
   .swiper-slide {
     width: unset !important;
+  }
+  
+  .swiper-container {
+    padding: 0px 16px;
   }
 
   .platform-motivator {
