referral landing skeleton loader added

--- a/react_webviews/src/pages/ReferAndEarn/Landing/Landing.scss
+++ b/react_webviews/src/pages/ReferAndEarn/Landing/Landing.scss
@@ -35,4 +35,10 @@
     margin-top: 40px;
     cursor: pointer;
   }
+
+  .rae-card-loader {
+    margin: 16px 16px 0;
+    border-radius: 16px;
+    height: 140px;
+  }
 }
