--- a/react_webviews/src/pages/ReferAndEarn/TermsAndCondtions/TermsAndCondtions.scss
+++ b/react_webviews/src/pages/ReferAndEarn/TermsAndCondtions/TermsAndCondtions.scss
@@ -1,5 +1,4 @@
 .refer-and-earn-tnc {
-
   .tnc-wrapper {
     padding-bottom: 40px;
   }
@@ -14,7 +13,7 @@
 
   .tnc-footer {
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     right: 0;
     padding: 8px 16px;
