Portfolio return calculator

--- a/react_webviews/src/portfolio_redesign/screens/InfoAction/style.scss
+++ b/react_webviews/src/portfolio_redesign/screens/InfoAction/style.scss
@@ -4,6 +4,9 @@
     background-color: #fff;
     .main-container {
       margin-bottom: 24px;
+      .btn-calculate-returns {
+        margin: -2px 0 0 3px;
+      }
     }
   }
 }
