--- a/react_webviews/src/pages/ReferAndEarn/WithdrawPlaced/WithdrawPlaced.scss
+++ b/react_webviews/src/pages/ReferAndEarn/WithdrawPlaced/WithdrawPlaced.scss
@@ -1,8 +1,8 @@
-.reward-withdraw-placed {
+.reward-withdrawal-placed {
   background-color: white;
 
   .rwp-success-lottie-anim {
-    max-width: 230px;
-    max-height: 230px;
+    width: 230px;
+    height: 230px;
   }
 }
