--- a/react_webviews/src/portfolio_redesign/portfolioLanding/style.scss
+++ b/react_webviews/src/portfolio_redesign/portfolioLanding/style.scss
@@ -15,6 +15,10 @@
       cursor: pointer;
       padding-bottom: 30px;
     }
+    .pf-landing-lottie-anim {
+      width: 40px;
+      height: 40px;
+    }
   }
   .heading-row {
     margin-bottom: 16px;
