--- a/react_webviews/src/portfolio_redesign/mutualFund/style.scss
+++ b/react_webviews/src/portfolio_redesign/mutualFund/style.scss
@@ -10,6 +10,9 @@
   }
   .info-card-section {
     padding: 24px 20px 0;
+    .external-portfolio-card {
+      margin-bottom: 16px;
+    }
     .info-card-wrapper:first-child {
       margin-bottom: 16px;
     }
