--- a/react_webviews/src/portfolio_redesign/portfolioLanding/style.scss
+++ b/react_webviews/src/portfolio_redesign/portfolioLanding/style.scss
@@ -3,7 +3,7 @@
     background: #3e1a9d url("../../assets/portfolio_landing_banner.svg")
       no-repeat left bottom;
     background-size: contain;
-    margin: 0 -16px 16px;
+    margin: 0 -16px 0;
     padding: 16px 16px 0;
     .eye-icon {
       cursor: pointer;
@@ -25,7 +25,7 @@
     padding: 0 16px;
   }
   .carousel-section {
-    margin: 0 -16px 24px -16px;
+    margin: 16px -16px 24px -16px;
     padding: 0;
     .swiper-slide {
       &:first-child {
