MF Errorstate + empty state + ext pf card

--- a/react_webviews/src/portfolio_redesign/AllocationDetails/style.scss
+++ b/react_webviews/src/portfolio_redesign/AllocationDetails/style.scss
@@ -26,6 +26,12 @@
           margin-bottom: 16px;
         }
       }
+      .progressBar-section-empty {
+        margin-top: 160px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
 }
