--- a/react_webviews/src/index.css
+++ b/react_webviews/src/index.css
@@ -1,12 +1,13 @@
-html, body, #root .ReferralContainerWrapper {
+html,
+body,
+#root .ReferralContainerWrapper {
   height: 100%;
-  
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Rubik', 'Roboto', sans-serif;
+  font-family: "Rubik", "Roboto", sans-serif;
   line-height: 1.5em;
   font-size: 14px;
   -webkit-overflow-scrolling: touch;
@@ -29,7 +30,7 @@ button,
 select,
 a,
 div {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .Card {
