--- a/react_webviews/src/featureComponent/ReferAndEarn/ShareCodeComponet/ShareCodeComponent.scss
+++ b/react_webviews/src/featureComponent/ReferAndEarn/ShareCodeComponet/ShareCodeComponent.scss
@@ -4,7 +4,7 @@
     padding: 12px 16px;
     gap: 10px;
     width: 100%;
-    border: 1px solid #ececf1;
+    border: 1px solid;
     border-radius: 12px;
   }
 }
