--- a/react_webviews/src/portfolio_redesign/AllInvestments/AllInvestments.scss
+++ b/react_webviews/src/portfolio_redesign/AllInvestments/AllInvestments.scss
@@ -11,6 +11,7 @@
       height: 100%;
       background-color: #f8f8fa;
       .investment-card {
+        cursor: pointer;
         margin-bottom: 16px;
       }
     }
