--- a/react_webviews/src/portfolio_redesign/screens/InfoAction/ReturnCalculator.scss
+++ b/react_webviews/src/portfolio_redesign/screens/InfoAction/ReturnCalculator.scss
@@ -1,18 +1,21 @@
 .return-calculator {
-    padding: 16px;
-    .MuiTabs-root {
-        margin: 24px 0;
-        .MuiTabs-flexContainer {
-            justify-content: flex-start !important;
-        }
+  padding: 16px;
+  .no-pills {
+    margin-top: 24px;
+  }
+  .MuiTabs-root {
+    margin: 24px 0;
+    .MuiTabs-flexContainer {
+      justify-content: flex-start !important;
     }
-    .return-slider {
-        padding: 16px 20px 0;
-    }
-    .investment-period {
-        margin: 16px 0;
-    }
-    .return-results {
-        margin: 24px 0 32px;
-    }
+  }
+  .return-slider {
+    padding: 16px 20px 0;
+  }
+  .investment-period {
+    margin: 16px 0;
+  }
+  .return-results {
+    margin: 24px 0 32px;
+  }
 }
