--- a/react_webviews/src/portfolio_redesign/mutualFund/MfLanding.scss
+++ b/react_webviews/src/portfolio_redesign/mutualFund/MfLanding.scss
@@ -63,6 +63,7 @@
 #skip-button {
   position: absolute !important;
   left: 10px !important;
+  cursor: pointer;
   background-color: transparent !important;
   padding: 10px 0 !important;
   font-size: 14px !important;
