Updated missing DataAids

--- a/react_webviews/src/portfolio_redesign/AllInvestments/AllInvestments.scss
+++ b/react_webviews/src/portfolio_redesign/AllInvestments/AllInvestments.scss
@@ -10,7 +10,7 @@
       margin: 0 -16px;
       height: 100%;
       background-color: #f8f8fa;
-      .investment-card {
+      .feature-card {
         cursor: pointer;
         margin-bottom: 16px;
       }
